# audio-experiments

./: .gitignore  LICENSE  README.md  package.json
01-hello-wasm/: Cargo.toml  index.html  index.js  style.css
01-hello-wasm/src/: lib.rs
01-making-noise/: style.css
02-audio-synth/: index.html  index.js  style.css
02-declarative-synth/: index.js
02-making-noise/: index.html  index.js  style.css
03-declarative-synth/: index.html
03-playing-timing/: index.html
04-playing-timing/: index.html  index.js  style.css
04-synthesising/: index.js  style.css
05-synthesising/: index.html  index.js  style.css
05-ui-components/: index.html  index.js  style.css
05-ui-components/js/: pianoroll.js  tempo.js  time-signature.js
06-MIDI/: index.html  index.js  style.css
06-ui-components/: index.html  index.js  style.css
06-ui-components/js/: pianoroll.js  tempo.js
07-waves/: index.html  index.js  style.css
07-waves/01-wavetables/: index.html  index.js  style.css  waveforms.js
07-waves/01-wavetables/wavetables/: Bass.js  BassAmp360.js  BassFuzz.js  BassFuzz2.js  BassSubDub.js  BassSubDub2.js  Brass.js  BritBlues.js  BritBluesDriven.js  Buzzy1.js  Buzzy2.js  Celeste.js  ChorusStrings.js  Dissonant1.js  Dissonant2.js  DissonantPiano.js  DroppedSaw.js  DroppedSquare.js  DynaEPBright.js  DynaEPMed.js  Ethnic33.js  Full1.js  Full2.js  GuitarFuzz.js  Harsh.js  MklHard.js  Noise.js  Organ2.js  Organ3.js  PhonemeAh.js  PhonemeBah.js  PhonemeEe.js  Piano.js  (+18 more)
07-waves/02-custom-oscillator/: index.js  style.css  waveforms.js
07-waves/02-fourier/: index.html  index.js
